set up page to have side bar

--- a/exploreSD/css/style.css
+++ b/exploreSD/css/style.css
@@ -3,5 +3,16 @@ html, body {
 }
 
 #map {
-    height: 100%;
+    height: 600px;
+}
+
+.infoSection {
+  float: left;
+  width: 30%;
+  height: 600px;
+}
+
+.theMap {
+  width: 100%;
+  position: relative;
 }
