--- a/cogs121/public/css/style.css
+++ b/cogs121/public/css/style.css
@@ -17,6 +17,41 @@ html, body {
   position: relative;
 }
 
+.thumbnail {
+  position: relative;
+}
+
+.background-image {
+  opacity: .8;
+}
+
+.caption {
+  position: absolute;
+  top: 24%;
+  left: 0;
+  width: 100%;
+}
+
+.navbar-brand{
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 17px;
+}
+.nav{
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 15px;
+}
+h1{
+  font-family: 'Bad Script', cursive;
+    font-size: 70px;
+    font-weight: bold;
+    color: #fafafa;
+}
+h3{
+  font-family: 'Bad Script', cursive;
+  font-size: 32px;
+  color: #323232;
+}
+
 #firstpage, img {
   width: 100%;
   height: 100%;
