some style fixes

--- a/cogs121/public/css/style.css
+++ b/cogs121/public/css/style.css
@@ -3,12 +3,16 @@
   margin-bottom: 20px;
 }
 
+.container {
+  max-width: 90%;
+}
+
+
 .panel {
   background-color: #F4F4F4;
 }
 
 .filter label {
-  padding-left: 65px;
   float: left;
 }
 
