Added scroll for locations list and cleaned up each location info

--- a/exploreSD/public/css/style.css
+++ b/exploreSD/public/css/style.css
@@ -112,3 +112,9 @@ h3{
   color: #fff;
   text-align: center;
 }
+
+/* Locations Sidebar */
+#locations-list {
+  height: 800px;
+  overflow: scroll;
+}
