--- a/exploreSD/public/css/style.css
+++ b/exploreSD/public/css/style.css
@@ -106,7 +106,7 @@ h3{
 }
 
 #facts {
-  padding-top: 50px;
+  padding-top: 70px;
 }
 
 
@@ -171,9 +171,16 @@ div.tab button.active {
 
 
 /*Fun facts section */
+.factsheader {
+  padding-bottom: 20px;
+}
+
+.border-right {
+  border-right: 1px solid #323232;
+}
 .history-column img {
   width: 300px;
-  height: 150px;
+  height: 147px;
 }
 .attraction-column img {
   width: 300px;
@@ -182,6 +189,18 @@ div.tab button.active {
 .beaches-column img {
   width: 300px;
   height: 150px;
+}
+
+.column-info {
+  text-align: left;
+  font-size: 15px;
+  font-family: 'Noto Sans', sans-serif;
+  color: #323232 !important;
+}
+
+.factsfooter {
+  padding-top: 30px;
+  padding-bottom: 20px;
 }
 
 /* takes out unnecessary outline */
