--- a/exploreSD/public/css/style.css
+++ b/exploreSD/public/css/style.css
@@ -163,10 +163,14 @@ div.tab button.active {
 
 /* Style the tab content */
 .tabcontent {
-    display: none;
+    /*display: none;*/
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-top: none;
+}
+
+#saved-list {
+  display: none;
 }
 
 
