--- a/exploreSD/public/css/style.css
+++ b/exploreSD/public/css/style.css
@@ -1,3 +1,8 @@
+/* Body */
+body {
+  font-family: 'Nunito Sans', sans-serif;
+}
+
 /* filtering */
 .filter {
   margin-bottom: 10px;
@@ -132,9 +137,14 @@ h3{
   height: 100%;
 }
 
+/* Map Section */
+
 #mapfeature {
   padding-top: 50px;
+
 }
+
+/* Facts Section */
 
 #facts {
   padding-top: 70px;
