--- a/exploreSD/public/css/style.css
+++ b/exploreSD/public/css/style.css
@@ -125,6 +125,11 @@ h1{
     font-size: 70px;
     font-weight: bold;
     color: #fafafa;
+    text-shadow:
+      -1px -1px 0 #000,
+      1px -1px 0 #000,
+      -1px 1px 0 #000,
+      1px 1px 0 #000;
 }
 h3{
   font-family: 'Bad Script', cursive;
