--- a/exploreSD/public/css/style.css
+++ b/exploreSD/public/css/style.css
@@ -19,12 +19,14 @@ body {
 }
 
 #left_filter {
-  width: 88%;
+  width: 95%;
+  max-width: 700px;
   padding-top: 7px;
   padding-bottom: 2px;
 }
 
 #right_filter {
+  width: 95%;
   max-width: 700px;
   padding-top: 7px;
   padding-bottom: 2px;
@@ -64,7 +66,7 @@ body {
   margin-left: 4px;
 }
 
-.sm {
+/*.sm {
   width: 120px;
 }
 
@@ -78,7 +80,7 @@ body {
 
 .lg {
   width: 150px;
-}
+}*/
 
 /* end filtering */
 #map {
@@ -137,22 +139,23 @@ h3{
   color: #323232;
 }
 
-#firstpage, img {
+#firstpage img {
   width: 100%;
-  height: 100%;
+  height: 100vh;
 }
 
 /* Map Section */
 
 #mapfeature {
   padding-top: 50px;
-  height: 90vh;
+  height: 100vh;
 }
 
 /* Facts Section */
 
 #facts {
   padding-top: 70px;
+  height: 100vh;
 }
 
 
