--- a/exploreSD/public/css/style.css
+++ b/exploreSD/public/css/style.css
@@ -8,6 +8,20 @@ body {
   margin-bottom: 10px;
 }
 
+.row_2 div {
+  margin-left: 0px !important;
+}
+
+.thumbnail {
+  padding: 2px;
+  height: 21px;
+  width: 18px;
+}
+
+.row {
+  margin-top: 3em;
+}
+
 .filter_container {
   margin-top: 10px;
 }
@@ -20,14 +34,15 @@ body {
 
 #left_filter {
   width: 95%;
-  max-width: 700px;
+  max-width: 900px;
   padding-top: 7px;
   padding-bottom: 2px;
 }
 
 #right_filter {
   width: 95%;
-  max-width: 700px;
+  max-width: 900px;
+  margin-top: 10px;
   padding-top: 7px;
   padding-bottom: 2px;
 }
@@ -42,6 +57,8 @@ body {
 }
 
 .filter label {
+  margin-top: 1px;
+  margin-right: 3px;
   font-size: 11px;
   float: left;
 }
@@ -65,22 +82,6 @@ body {
 #right_filter div {
   margin-left: 4px;
 }
-
-/*.sm {
-  width: 120px;
-}
-
-.xxs {
-  width: 70px;
-}
-
-.xs {
-  width: 100px;
-}
-
-.lg {
-  width: 150px;
-}*/
 
 /* end filtering */
 #map {
