--- a/exploreSD/public/css/style.css
+++ b/exploreSD/public/css/style.css
@@ -2,6 +2,20 @@
 body {
   font-family: 'Nunito Sans', sans-serif;
 }
+/* fb button */
+.btn-facebook {
+  color: #fff;
+  background-color: #4C67A1;
+  margin-bottom: 2em !important;
+}
+
+.btn-facebook:hover {
+  color: #fff;
+  background-color: #405D9B;
+}
+.btn-facebook:focus {
+  color: #fff;
+}
 
 /* filtering */
 .filter {
