--- a/exploreSD/public/css/leaflet-routing-machine.css
+++ b/exploreSD/public/css/leaflet-routing-machine.css
@@ -1,5 +1,5 @@
 .leaflet-routing-container, .leaflet-routing-error {
-    width: 320px;
+    width: 20vw;
     background-color: white;
     padding-top: 4px;
     transition: all 0.2s ease;
@@ -34,7 +34,7 @@
     transition: all 0.2s ease;
 }
 
-.leaflet-control-container .leaflet-routing-container-hide .leaflet-routing-alt, 
+.leaflet-control-container .leaflet-routing-container-hide .leaflet-routing-alt,
 .leaflet-control-container .leaflet-routing-container-hide .leaflet-routing-geocoders {
     display: none;
 }
