--- a/exploreSD/public/css/style.css
+++ b/exploreSD/public/css/style.css
@@ -128,7 +128,7 @@ body {
 
 .caption {
   position: absolute;
-  top: 24%;
+  top: 20%;
   left: 0;
   width: 100%;
 }
@@ -163,6 +163,33 @@ h3{
   width: 100%;
   height: 100vh;
 }
+
+.img-overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+}
+
+.img-overlay:before {
+  content: ' ';
+  display: block;
+  /* adjust 'height' to position overlay content vertically */
+  height: 50%;
+}
+
+.get-started {
+  top: 45%;
+
+}
+
+.btn-lg.round {
+  border-radius: 24px;
+}
+
+
 
 /* Map Section */
 
