--- a/exploreSD/public/css/styleUI.css
+++ b/exploreSD/public/css/styleUI.css
@@ -42,16 +42,16 @@ div.tab button {
 /* Change background color of buttons on hover */
 div.tab button:hover
 div.tab button:active{
-  border: 2px solid #000;
+  border: 4px solid #64b3f4;
   color: #000;
   font-size: 17px;
-  background-color: #f9fdff;
+  background-color: #ccc;
   border-radius: 5%;
 }
 /* Create an active/current tablink class */
 div.tab button.active {
     background-color: #fff;
-    border: 2px #inherit;
+    border: 2px #64b3f4;
     border-style: double;
 
     color: #000;
@@ -64,6 +64,11 @@ div.tab button.active {
 #view-map-button{
   background-color: black;
   color: red;
+}
+#saved-view-map-button{
+  background-color: black;
+  color: red;
+
 }
 #locations-list{
   background-color:#3b4147;
@@ -112,6 +117,26 @@ color: #000;
 font-size: 18px;
 }
 
+.rmvbtn{
+
+  background-color: inherit;
+  width: 45px;
+  border-radius: 10%;
+  border: 1px solid #cc3c22;
+  height: 37px;
+  color: #cc3c22;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.rmvbtn:hover,
+.rmvbtn:active{
+  background-color: #cc3c22;
+  color: #fff;
+  font-size: 18px;
+}
+
+}
 .buttons{
   width: 125%;
   margin-top: 30px;
@@ -122,7 +147,16 @@ font-size: 18px;
   background-color: #000;
   color: #fff;
 }
-
+.randomsearchbtn{
+  background-color: #000;
+  color: white;
+  font-size: 16px;
+  margin-left: auto;
+  border: 1px solid #000;
+  border-radius: 10%;
+  width: 80px;
+  margin-left: -25px;
+}
 .randomsearchbtn:hover{
   background-color: #fff;
   color: #000;
@@ -132,7 +166,16 @@ font-size: 18px;
   color:inherit;
   font-size: 16px;
 }
-
+.currentlocbtn{
+  background-color: #000;
+  color: white;
+  font-size: 16px;
+  margin-left: auto;
+  border: 1px solid #000;
+  border-radius: 10%;
+  width: 80px;
+  margin-left: -25px;
+}
 .currentlocbtn:hover{
   background-color: #fff;
   color: #000;
@@ -144,7 +187,15 @@ font-size: 18px;
 }
 .routingbtn{
   font-size: 17.5px;
+  background-color: #000;
+  color: white;
+  margin-left: auto;
+  border: 1px solid #000;
+  border-radius: 10%;
+  width: 80px;
+  margin-left: -25px;
 }
+
 .routingbtn:hover{
   background-color: #fff;
   color: #000;
@@ -178,4 +229,18 @@ font-size: 18px;
   background-color: #bbb;
   color:inherit;
   font-size: 17px;
+}
+
+.btn-fb{
+  font-size: 17px;
+  padding-right: 25px;
+}
+
+header{
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0,0,0,0.7));
+   background-size: cover;
+   background-position: center;
+   height: 100vh;
+   background-attachment: fixed;
+
 }
