--- a/exploreSD/public/css/styleUI.css
+++ b/exploreSD/public/css/styleUI.css
@@ -1,20 +1,17 @@
 /* map screen */
 #mapfeature {
-  padding-top: 25px;
-  height: 125vh;
-  background-color: #fcf7ea;
 }
 /* sd fun facts page*/
-#facts {
+/*#facts {
   padding-top: 70px;
   height: 90vh;
   background-color: #c9deed;
-}
+}*/
 
 
 
 /* Tab Style (Credit to Bootstrap example) */
-div.tab {
+/*div.tab {
     overflow: hidden;
     border: 2px solid #000;
     background-color: #000;
@@ -23,10 +20,10 @@ div.tab {
     font-size: 17px;
     font-weight: 900;
     margin-left: -25px;
-}
+}*/
 
 /* Style the buttons inside the tab */
-div.tab button {
+/*div.tab button {
     background-color: #000;
     border: 1px;
     outline: none;
@@ -37,31 +34,27 @@ div.tab button {
     color: #fff;
     padding-left: 15.25%;
     padding-right: 13.5%;
-}
+}*/
 
 /* Change background color of buttons on hover */
-div.tab button:hover
+/*div.tab button:hover
 div.tab button:active{
   border: 4px solid #64b3f4;
   color: #000;
   font-size: 17px;
   background-color: #ccc;
   border-radius: 5%;
-}
+}*/
 /* Create an active/current tablink class */
-div.tab button.active {
+/*div.tab button.active {
     background-color: #fff;
     border: 2px #64b3f4;
     border-style: double;
 
     color: #000;
+}*/
 
-    /**/
-
-
-}
-
-#view-map-button{
+/*#view-map-button{
   background-color: black;
   color: red;
 }
@@ -243,4 +236,4 @@ header{
    height: 100vh;
    background-attachment: fixed;
 
-}
+}*/
